# robotone

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
lib/: cpm.cmake  juce.cmake  juce_jingles.cmake  qdft.cmake  samplerate.cmake  sdft.cmake
modules/: CMakeLists.txt
modules/juce_jingles/: juce_jingles.h
modules/juce_jingles/audio/: AudioEffect.h  AudioEffectProcessor.h
modules/juce_jingles/params/: GenericParameterContainer.h  GenericParameterListener.h  GenericParameterSubscription.h  XmlParameters.h
modules/juce_jingles/procs/: StereoProcessor.h
modules/juce_jingles/utils/: Chronometer.h  Logger.h  Timer.h
scripts/: build_macos.sh  build_ubuntu.sh  build_windows.bat  postbuild_macos.sh  postbuild_ubuntu.sh  postbuild_windows.bat  prebuild_macos.sh  prebuild_ubuntu.sh  prebuild_windows.bat
src/Robocode/: Arctangent.h  Assert.h  CMakeLists.txt  Channel.cpp  Channel.h  Channels.cpp  Channels.h  DFT.h  Header.h  Lerp.cpp  Lerp.h  Math.h  Noise.h  QDFT.cpp  QDFT.h  SDFT.cpp  SDFT.h  SRC.cpp  SRC.h  Vocoder.cpp  Vocoder.h
src/Robotone/: CMakeLists.txt  Editor.cpp  Editor.h  Effect.cpp  Effect.h  Jingles.cpp  Parameters.cpp  Parameters.h  Plugin.cpp  Processor.cpp  Processor.h
src/Robotone/DSP/: Channel.h  Channels.h  HalfBandFilter.h  Header.h  PVC.h  SDFT.h  SRC.h  SampleRateConverter.h  Vocoder.h
src/Robotone/DSP/SDFT/: osdft.h
src/Robotone/SDFT/: msdft.h  osdft.h
src/Robotone/Utils/: Chronometer.h  Timer.h
src/Robotone/Utils/Parameters/: GenericParameterContainer.h  GenericParameterListener.h  GenericParameterSubscription.h  XmlParameters.h
test/: halfband.py
